fix: adjust add button color as it was not visible

--- a/src/components/Starships/ShipCard/ShipCard.module.css
+++ b/src/components/Starships/ShipCard/ShipCard.module.css
@@ -73,7 +73,7 @@
 	font-size: 1.7rem;
   text-decoration: underline rgb(104, 104, 104);
 
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .name:hover {
@@ -136,6 +136,7 @@ button {
   font-size: 1rem;
   font-family: inherit;
 
+  color: rgb(218, 218, 218);
   background-color: transparent;
   border: 1px solid rgb(104, 104, 104);
 
@@ -144,5 +145,6 @@ button {
 }
 
 button:hover {
+  color: white;
   border: 1px solid rgb(0, 192, 64);
 }
